# teague.info

./: LICENSE  README.md  index.html  package-lock.json  package.json  sync.sh
docs/: gfm_harness_notes.md  gfm_paper_proposals.md  gfm_safety_gap_analysis.md  paper6_outline.md
docs/paper/: .gitignore  build-web.sh  main.tex  references.bib
docs/paper2/: build-web.sh  compute_example.py  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.tex  references.bib
docs/paper3/: build-web.sh  main.tex  references.bib
docs/paper4/: build-web.sh  main.tex  references.bib
docs/paper5/: build-web.sh  main.tex  notes.md  references.bib
docs/paper6/: .gitignore  build-web.sh  main.tex  notes.md  paper6_outline.md  references.bib
docs/paper7/: build-web.sh  main.tex  paper7_outline.md  references.bib
docs/paper8/: paper8_outline.md  paper8_reframing_revealed_sacrifice.md
docs/paper9/: paper9_proposal.md
docs/specs/: 2026-03-30-paper-drafting-design.md  PAPER_SPEC.md
gfm-harness/: README.md  constitution.md  pyproject.toml  setup.py
gfm-harness/experiments/task_001/: ledger.py  memory_smoke.py  run.py  sanity_check.py  tools_smoke.py
gfm-harness/experiments/task_001/session/memory/: working_buffer.jsonl
gfm-harness/harness/: agent.py  cli.py  config.py  goals.py  instance.py  loop.py  memory.py  phases.py  tools.py  vol_p.py
gfm-harness/harness/initial_ledgers/: __init__.py  default.py
gfm-harness/tests/: test_feature_state_persistence.py
public/articles/: agi.md  articleList.json  frameskipping.md  free.md  (+4 more)
src/: App.css  App.tsx  index.css
(+115 files in other folders)
