[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gfm-harness"
version = "0.0.1"
description = "A weakly-GFM measurement infrastructure for LLM agents"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Kraemahz" }]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
llm = [
    "anthropic>=0.40.0",
]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["harness*"]
exclude = ["experiments*", "tests*"]
